# deeplinker

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/scripts/: chrome.applescript  com_apple_Safari.applescript  com_apple_mail.applescript  com_googlecode_iterm2.applescript  front_app.applescript  mod.rs  safari.applescript
