[package]
name = "deeplinker"
version = "0.1.0"
authors = ["Brian McCallister <brianm@skife.org>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
json5 = "0.3"
serde_json = "1"
log = "0.4"
env_logger = "0.8"
